--- a/src/app/settings/password/password.component.html
+++ b/src/app/settings/password/password.component.html
@@ -2,7 +2,7 @@
   <div class="detail-inputs">
     <div class="w-100">
       <div class="relative">
-        <label class="input-label-default gray-1" for="oldPass">Current Password</label>
+        <label class="input-label-default color-gray-1" for="oldPass">Current Password</label>
         <input class="input-field body-4 w-100" type="password" id="oldPass" formControlName="oldPass"
           (keyup)="validateOldPassword()" />
         <div class="card-icons">
@@ -47,12 +47,12 @@
           </div>
         </div>
       </div>
-      <div class="mt-4 body-5 red">{{statusOldPass}}</div>
-      <div class="mt-4 body-5 red">{{errorMessage}}</div>
+      <div class="mt-4 body-5 color-red">{{statusOldPass}}</div>
+      <div class="mt-4 body-5 color-red">{{errorMessage}}</div>
     </div>
     <div class="w-100">
       <div class="relative">
-        <label class="input-label-default gray-1" for="newPass">New Password</label>
+        <label class="input-label-default color-gray-1" for="newPass">New Password</label>
         <input class="input-field body-4 w-100" type="password" id="newPass" formControlName="newPass"
           (keyup)="validateNewPassword()" />
         <div class="card-icons">
@@ -97,11 +97,11 @@
           </div>
         </div>
       </div>
-      <div class="mt-4 body-5 red">{{statusNewPass}}</div>
+      <div class="mt-4 body-5 color-red">{{statusNewPass}}</div>
     </div>
     <div class="w-100">
       <div class="relative">
-        <label class="input-label-default gray-1" for="confirmPass">Confirm Password</label>
+        <label class="input-label-default color-gray-1" for="confirmPass">Confirm Password</label>
         <input class="input-field body-4 w-100" type="password" id="confirmPass" formControlName="confirmPass"
           (keyup)="validateConfirmPassword()" />
         <div class="card-icons">
@@ -146,8 +146,8 @@
           </div>
         </div>
       </div>
-      <div class="mt-4 body-5 red">{{statusConfirmPass}}</div>
+      <div class="mt-4 body-5 color-red">{{statusConfirmPass}}</div>
     </div>
-    <div class="button-save button-1 mt-16 white" (click)="submit()">Save Changes</div>
+    <div class="button-save button-1 mt-16 color-white" (click)="submit()">Save Changes</div>
   </div>
 </form>
