--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,96 +1,50 @@
-<!-- <div class="settings-container">
-  <div class="title w-100">
+<div class="wrapper">
+  <div class="general-content">
     <div class="short-information">
       <img class="avatar circle-48" src={{user.value.img}} />
       <div class="name">
-        <div class="heading-7 black">{{this.user.value.firstName}} {{this.user.value.lastName}}</div>
-        <div class="body-6 gray-1">Update your username and manage your account</div>
+        <div class="heading-7 color-black">{{this.user.value.firstName}} {{this.user.value.lastName}}</div>
+        <div class="body-6 color-gray-1">Update your username and manage your account</div>
       </div>
     </div>
     <div class="go-pro" (click)="goToCard()">
       <div class="title button-3">
-        <div class="black">Go</div>
-        <div class="orange">Pro</div>
+        <div class="color-black">Go</div>
+        <div class="color-orange">Pro</div>
       </div>
-      <div class="body-8 gray-2">Add power features for just $5/month</div>
+      <div class="body-8 color-gray-2">Add power features for just $5/month</div>
     </div>
   </div>
-  <div class="detail">
-    <div class="list">
-      <div class="buttons">
-        <div class="button" (click)="chooseTab('general')" [ngClass]="{ 'button-orange': tabChoose === 'general' }">
-          <div class="icon">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
-              <path
-                d="M7.99899 0C8.23299 0.000326434 8.46687 0.0106692 8.69999 0.031C9.44299 0.095 9.98899 0.645 10.159 1.29L10.447 2.397C10.465 2.463 10.526 2.555 10.659 2.621C10.89 2.735 11.113 2.864 11.327 3.007C11.45 3.089 11.56 3.097 11.626 3.078L12.729 2.775C13.373 2.599 14.121 2.796 14.549 3.405C14.819 3.79 15.055 4.197 15.253 4.623C15.568 5.298 15.364 6.045 14.889 6.514L14.075 7.32C14.026 7.368 13.977 7.467 13.987 7.614C14.003 7.871 14.003 8.129 13.987 8.386C13.977 8.533 14.025 8.632 14.075 8.68L14.889 9.486C15.364 9.955 15.568 10.702 15.253 11.377C15.0546 11.8026 14.819 12.2098 14.549 12.594C14.121 13.204 13.373 13.401 12.729 13.224L11.627 12.922C11.56 12.903 11.45 12.911 11.327 12.993C11.113 13.1361 10.8898 13.265 10.659 13.379C10.526 13.445 10.465 13.537 10.448 13.603L10.158 14.709C9.98999 15.355 9.44299 15.905 8.69999 15.969C8.23356 16.01 7.76443 16.01 7.29799 15.969C6.55499 15.905 6.00899 15.355 5.83999 14.709L5.55099 13.603C5.53299 13.537 5.47199 13.445 5.33899 13.379C5.10792 13.2655 4.88475 13.1365 4.67099 12.993C4.54799 12.911 4.43799 12.903 4.37199 12.922L3.26899 13.225C2.62499 13.401 1.87699 13.204 1.44899 12.595C1.17953 12.2101 0.943979 11.8026 0.744991 11.377C0.429991 10.702 0.633991 9.955 1.10799 9.486L1.92299 8.68C1.97299 8.632 2.02099 8.533 2.01099 8.386C1.99499 8.12891 1.99499 7.87108 2.01099 7.614C2.02099 7.467 1.97299 7.368 1.92299 7.32L1.10799 6.514C0.633991 6.045 0.429991 5.298 0.744991 4.623C0.943116 4.19727 1.17871 3.78999 1.44899 3.406C1.87699 2.796 2.62499 2.599 3.26899 2.776L4.37099 3.078C4.43799 3.097 4.54799 3.089 4.67099 3.007C4.88499 2.864 5.10799 2.735 5.33899 2.621C5.47199 2.555 5.53299 2.463 5.54999 2.397L5.83999 1.291C6.00799 0.645 6.55499 0.095 7.29799 0.03C7.52899 0.01 7.76299 0 7.99899 0ZM7.42799 1.525C7.39199 1.528 7.31999 1.561 7.29099 1.671L7.00199 2.776C6.85499 3.337 6.45299 3.743 6.00399 3.965C5.83099 4.051 5.66399 4.148 5.50399 4.255C5.08699 4.533 4.53399 4.678 3.97499 4.525L2.87199 4.222C2.76299 4.192 2.69699 4.238 2.67699 4.267C2.45699 4.579 2.26499 4.911 2.10399 5.257C2.08999 5.288 2.08299 5.367 2.16299 5.447L2.97799 6.253C3.38899 6.659 3.53999 7.21 3.50799 7.709C3.49599 7.90281 3.49599 8.09719 3.50799 8.291C3.53999 8.79 3.38899 9.341 2.97799 9.747L2.16299 10.553C2.08199 10.633 2.08999 10.712 2.10399 10.743C2.26599 11.089 2.45699 11.42 2.67699 11.732C2.69699 11.762 2.76199 11.808 2.87199 11.778L3.97399 11.475C4.53399 11.322 5.08699 11.467 5.50399 11.745C5.66499 11.852 5.83199 11.949 6.00499 12.035C6.45199 12.257 6.85499 12.664 7.00199 13.224L7.29099 14.329C7.31999 14.438 7.39199 14.472 7.42799 14.475C7.80794 14.508 8.19004 14.508 8.56999 14.475C8.60599 14.472 8.67799 14.439 8.70699 14.329L8.99599 13.224C9.14299 12.663 9.54499 12.257 9.99399 12.035C10.167 11.949 10.334 11.852 10.494 11.745C10.911 11.467 11.464 11.322 12.023 11.475L13.126 11.778C13.235 11.807 13.301 11.762 13.321 11.733C13.541 11.42 13.732 11.089 13.894 10.743C13.908 10.712 13.915 10.633 13.835 10.553L13.02 9.747C12.609 9.341 12.458 8.79 12.49 8.291C12.502 8.09719 12.502 7.90281 12.49 7.709C12.458 7.21 12.609 6.659 13.02 6.253L13.835 5.447C13.916 5.367 13.908 5.288 13.894 5.257C13.7326 4.91106 13.5408 4.5801 13.321 4.268C13.301 4.238 13.236 4.192 13.126 4.222L12.024 4.525C11.464 4.678 10.911 4.533 10.494 4.255C10.3335 4.14754 10.1661 4.05067 9.99299 3.965C9.54599 3.743 9.14299 3.336 8.99599 2.776L8.70699 1.671C8.67799 1.561 8.60599 1.528 8.56999 1.525C8.19004 1.492 7.80794 1.492 7.42799 1.525ZM10.999 8C10.999 8.79565 10.6829 9.55871 10.1203 10.1213C9.5577 10.6839 8.79464 11 7.99899 11C7.20334 11 6.44028 10.6839 5.87767 10.1213C5.31506 9.55871 4.99899 8.79565 4.99899 8C4.99899 7.20435 5.31506 6.44129 5.87767 5.87868C6.44028 5.31607 7.20334 5 7.99899 5C8.79464 5 9.5577 5.31607 10.1203 5.87868C10.6829 6.44129 10.999 7.20435 10.999 8ZM9.49899 8C9.49886 7.60204 9.34064 7.22044 9.05915 6.93913C8.77766 6.65783 8.39595 6.49987 7.99799 6.5C7.60003 6.50013 7.21843 6.65835 6.93712 6.93984C6.65582 7.22133 6.49786 7.60304 6.49799 8.001C6.49812 8.39896 6.65634 8.78056 6.93783 9.06187C7.07721 9.20116 7.24266 9.31163 7.42474 9.38697C7.60681 9.46232 7.80194 9.50107 7.99899 9.501C8.19604 9.50093 8.39115 9.46206 8.57317 9.38659C8.75519 9.31112 8.92057 9.20054 9.05986 9.06116C9.19915 8.92178 9.30962 8.75633 9.38496 8.57425C9.46031 8.39218 9.49906 8.19705 9.49899 8Z"
-                fill="#999999" [ngClass]="{ 'fill-orange': tabChoose === 'general' }" />
-            </svg>
-          </div>
-          <div class="{{ tabChoose === 'general' ? 'button-2 orange' : 'body-4 gray-2'}}">General</div>
-        </div>
-        <div class="button" (click)="chooseTab('password')" [ngClass]="{ 'button-orange': tabChoose === 'password' }">
-          <div class="icon">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
-              <path
-                d="M8.533 0.134025L13.783 1.81402C14.1364 1.92702 14.4447 2.14938 14.6634 2.44901C14.8822 2.74864 15 3.11004 15 3.48102V7.00102C15 8.56702 14.68 10.183 13.697 11.683C12.714 13.181 11.112 14.496 8.665 15.538C8.45473 15.6276 8.22854 15.6737 8 15.6737C7.77146 15.6737 7.54527 15.6276 7.335 15.538C4.888 14.496 3.286 13.181 2.303 11.683C1.32 10.183 1 8.56702 1 7.00102V3.48102C0.99997 3.11004 1.11784 2.74864 1.33658 2.44901C1.55533 2.14938 1.86364 1.92702 2.217 1.81402L7.467 0.134025C7.81367 0.0230335 8.18633 0.0230335 8.533 0.134025ZM7.923 1.56302L7.924 1.56402L2.674 3.24402C2.62376 3.26022 2.5799 3.29183 2.54867 3.33438C2.51743 3.37693 2.5004 3.42824 2.5 3.48102V7.00102C2.5 8.36102 2.775 9.66702 3.557 10.86C4.341 12.054 5.678 13.202 7.923 14.158C7.94734 14.1684 7.97353 14.1738 8 14.1738C8.02647 14.1738 8.05266 14.1684 8.077 14.158C10.322 13.201 11.659 12.055 12.443 10.861C13.225 9.66702 13.5 8.35903 13.5 7.00102V3.48102C13.5 3.42803 13.4831 3.37642 13.4518 3.33365C13.4205 3.29087 13.3765 3.25913 13.326 3.24302L8.076 1.56302C8.02625 1.54703 7.97275 1.54703 7.923 1.56302ZM9.5 6.50102C9.5 7.03702 9.214 7.53302 8.75 7.80102V10.251C8.75 10.4499 8.67098 10.6407 8.53033 10.7814C8.38968 10.922 8.19891 11.001 8 11.001C7.80109 11.001 7.61032 10.922 7.46967 10.7814C7.32902 10.6407 7.25 10.4499 7.25 10.251V7.80102C7.02201 7.66939 6.83267 7.48007 6.70102 7.25209C6.56937 7.02411 6.50004 6.76549 6.5 6.50223C6.49996 6.23896 6.5692 5.98032 6.70078 5.7523C6.83236 5.52427 7.02163 5.33489 7.24958 5.20319C7.47753 5.07148 7.73614 5.00209 7.9994 5.00199C8.26266 5.00188 8.52132 5.07107 8.74938 5.20259C8.97743 5.33411 9.16686 5.52334 9.29862 5.75126C9.43038 5.97918 9.49983 6.23776 9.5 6.50102Z"
-                fill="#999999" [ngClass]="{ 'fill-orange': tabChoose === 'password' }" />
-            </svg>
-          </div>
-          <div class="{{ tabChoose === 'password' ? 'button-2 orange' : 'body-4 gray-2'}}">Password</div>
-        </div>
-        <div class="button" (click)="chooseTab('billing')" [ngClass]="{ 'button-orange': tabChoose === 'billing' }">
-          <div class="icon">
-            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M12.0241 9.03072C11.7441 9.30405 11.5841 9.69739 11.6241 10.1174C11.6841 10.8374 12.3441 11.3641 13.0641 11.3641H14.3307V12.1574C14.3307 13.5374 13.2041 14.6641 11.8241 14.6641H4.17073C2.79073 14.6641 1.66406 13.5374 1.66406 12.1574V7.67074C1.66406 6.29074 2.79073 5.16406 4.17073 5.16406H11.8241C13.2041 5.16406 14.3307 6.29074 14.3307 7.67074V8.63074H12.9841C12.6107 8.63074 12.2707 8.77739 12.0241 9.03072Z"
-                stroke="#999999" [ngClass]="{ 'fill-orange-stroke': tabChoose === 'billing' }" stroke-linecap="round" stroke-linejoin="round" />
-              <path
-                d="M1.66406 8.26897V5.22234C1.66406 4.42901 2.15073 3.72231 2.89073 3.44231L8.18406 1.44231C9.01073 1.12898 9.8974 1.74233 9.8974 2.629V5.16232"
-                stroke="#999999" [ngClass]="{ 'fill-orange-stroke': tabChoose === 'billing' }" stroke-linecap="round" stroke-linejoin="round" />
-              <path
-                d="M15.0405 9.31278V10.6862C15.0405 11.0528 14.7472 11.3528 14.3738 11.3661H13.0672C12.3472 11.3661 11.6872 10.8395 11.6272 10.1195C11.5872 9.69947 11.7472 9.30613 12.0272 9.0328C12.2738 8.77946 12.6138 8.63281 12.9872 8.63281H14.3738C14.7472 8.64615 15.0405 8.94612 15.0405 9.31278Z"
-                stroke="#999999" [ngClass]="{ 'fill-orange-stroke': tabChoose === 'billing' }" stroke-linecap="round" stroke-linejoin="round" />
-              <path d="M4.66797 8H9.33464" stroke="#999999" [ngClass]="{ 'fill-orange-stroke': tabChoose === 'billing' }" stroke-linecap="round" stroke-linejoin="round" />
-            </svg>
-          </div>
-          <div class="{{ tabChoose === 'billing' ? 'button-2 orange' : 'body-4 gray-2'}}">Billing</div>
-        </div>
-      </div>
-      <div class="line gray-3"></div>
-      <div class="button">
-        <div class="icon">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
-            <path
-              d="M5.93359 5.04016C6.14026 2.64016 7.37359 1.66016 10.0736 1.66016H10.1603C13.1403 1.66016 14.3336 2.85349 14.3336 5.83349V10.1802C14.3336 13.1602 13.1403 14.3535 10.1603 14.3535H10.0736C7.39359 14.3535 6.16026 13.3868 5.94026 11.0268"
-              stroke="#FF3830" stroke-linecap="round" stroke-linejoin="round" />
-            <path d="M1.33203 8H9.9187" stroke="#FF3830" stroke-linecap="round" stroke-linejoin="round" />
-            <path d="M8.43359 5.76562L10.6669 7.99896L8.43359 10.2323" stroke="#FF3830" stroke-linecap="round"
-              stroke-linejoin="round" />
-          </svg>
-        </div>
-        <div class="body-4 red" (click)="logout()">Log Out</div>
+  <div class="detail-content">
+    <div class="setting-actions">
+      <div class="nav-settings">
+        <a class="nav-setting-item body-4" (click)="chooseTab('general')" [ngClass]="{ 'button-orange button-2': tabChoose === 'general' }"><i class="fa-solid fa-gear"></i> General</a>
+        <a class="nav-setting-item body-4" (click)="chooseTab('password')" [ngClass]="{ 'button-orange button-2': tabChoose === 'password' }"><i class="fa-solid fa-lock"></i> Password</a>
+        <a class="nav-setting-item body-4" (click)="chooseTab('billing')" [ngClass]="{ 'button-orange button-2': tabChoose === 'billing' }"><i class="fa-solid fa-wallet"></i> Billing</a>
+        <div class="divider"></div>
+        <a class="nav-setting-item logout-item" (click)="logout()"><i class="fa-solid fa-power-off"></i> Log Out</a>
       </div>
     </div>
-
-
-    <ng-container *ngIf="tabChoose != 'general'; else generalTemplate">
-      <ng-container *ngIf="tabChoose != 'password'; else passwordTemplate">
-        <ng-container *ngIf="tabChoose != 'billing'; else billingTemplate">
+    <div class="setting-user-detail">
+      <ng-container *ngIf="tabChoose != 'general'; else generalTemplate">
+        <ng-container *ngIf="tabChoose != 'password'; else passwordTemplate">
+          <ng-container *ngIf="tabChoose != 'billing'; else billingTemplate">
+          </ng-container>
         </ng-container>
       </ng-container>
-    </ng-container>
-    <ng-template #generalTemplate>
-      <app-general class="w-100" [user]="user" (saveChanges)="saveChanges()" (onFileSelected)="onFileSelected($event)"
-        (sendOtp)="sendOtp()" (sendVerifyEmail)="sendVerifyEmail()"
-        (verificationPhoneWhenVerify)="verificationPhoneWhenVerify($event)"></app-general>
-    </ng-template>
-    <ng-template #passwordTemplate>
-      <app-password class="w-100" [formChangePassword]="formChangePassword"
-        (saveChanges)="saveChangesPass()"></app-password>
-    </ng-template>
-    <ng-template #billingTemplate>
-      <app-billing style="flex-grow: 1;" (goPro)="goToCard()"></app-billing>
-    </ng-template>
+      <ng-template #generalTemplate>
+        <app-general class="w-100" [user]="user" (saveChanges)="saveChanges()" (onFileSelected)="onFileSelected($event)"
+          (sendOtp)="sendOtp()" (sendVerifyEmail)="sendVerifyEmail()"
+          (verificationPhoneWhenVerify)="verificationPhoneWhenVerify($event)"></app-general>
+      </ng-template>
+      <ng-template #passwordTemplate>
+        <app-password class="w-100" [formChangePassword]="formChangePassword"
+          (saveChanges)="saveChangesPass()"></app-password>
+      </ng-template>
+      <ng-template #billingTemplate>
+        <app-billing style="flex-grow: 1;" (goPro)="goToCard()"></app-billing>
+      </ng-template>
+    </div>
   </div>
   <div class="modal" *ngIf="showModalSuccessfully">
     <div class="modal-content">
@@ -210,11 +164,11 @@
           </svg>
         </div>
         <div class="texts">
-          <div class="heading-7 black">Change Successfully</div>
-          <div class="body-6 black">You have changed your account</div>
+          <div class="heading-7 color-black">Change Successfully</div>
+          <div class="body-6 color-black">You have changed your account</div>
         </div>
       </div>
-      <div class="button-save button-1 mt-16 white" (click)="backToHomepage()">Back to Homepage</div>
+      <div class="button-save button-1 mt-16 color-white" (click)="backToHomepage()">Back to Homepage</div>
     </div>
   </div>
   <div class="modal" *ngIf="showModalFailed">
@@ -367,61 +321,11 @@
           </svg>
         </div>
         <div class="texts">
-          <div class="heading-7 black">Change Failed</div>
-          <div class="body-6 black">You have not changed your account</div>
+          <div class="heading-7 color-black">Change Failed</div>
+          <div class="body-6 color-black">You have not changed your account</div>
         </div>
       </div>
-      <div class="button-save button-1 mt-16 white" (click)="closeModal()">Try again</div>
-    </div>
-  </div>
-</div> -->
-
-<div class="wrapper">
-  <div class="general-content">
-    <div class="short-information">
-      <img class="avatar circle-48" src={{user.value.img}} />
-      <div class="name">
-        <div class="heading-7 black">{{this.user.value.firstName}} {{this.user.value.lastName}}</div>
-        <div class="body-6 gray-1">Update your username and manage your account</div>
-      </div>
-    </div>
-    <div class="go-pro" (click)="goToCard()">
-      <div class="title button-3">
-        <div class="black">Go</div>
-        <div class="orange">Pro</div>
-      </div>
-      <div class="body-8 gray-2">Add power features for just $5/month</div>
-    </div>
-  </div>
-  <div class="detail-content">
-    <div class="setting-actions">
-      <div class="nav-settings">
-        <a class="nav-setting-item body-4" (click)="chooseTab('general')" [ngClass]="{ 'button-orange button-2': tabChoose === 'general' }"><i class="fa-solid fa-gear"></i> General</a>
-        <a class="nav-setting-item body-4" (click)="chooseTab('password')" [ngClass]="{ 'button-orange button-2': tabChoose === 'password' }"><i class="fa-solid fa-lock"></i> Password</a>
-        <a class="nav-setting-item body-4" (click)="chooseTab('billing')" [ngClass]="{ 'button-orange button-2': tabChoose === 'billing' }"><i class="fa-solid fa-wallet"></i> Billing</a>
-        <div class="divider"></div>
-        <a class="nav-setting-item logout-item" (click)="logout()"><i class="fa-solid fa-power-off"></i> Log Out</a>
-      </div>
-    </div>
-    <div class="setting-user-detail">
-      <ng-container *ngIf="tabChoose != 'general'; else generalTemplate">
-        <ng-container *ngIf="tabChoose != 'password'; else passwordTemplate">
-          <ng-container *ngIf="tabChoose != 'billing'; else billingTemplate">
-          </ng-container>
-        </ng-container>
-      </ng-container>
-      <ng-template #generalTemplate>
-        <app-general class="w-100" [user]="user" (saveChanges)="saveChanges()" (onFileSelected)="onFileSelected($event)"
-          (sendOtp)="sendOtp()" (sendVerifyEmail)="sendVerifyEmail()"
-          (verificationPhoneWhenVerify)="verificationPhoneWhenVerify($event)"></app-general>
-      </ng-template>
-      <ng-template #passwordTemplate>
-        <app-password class="w-100" [formChangePassword]="formChangePassword"
-          (saveChanges)="saveChangesPass()"></app-password>
-      </ng-template>
-      <ng-template #billingTemplate>
-        <app-billing style="flex-grow: 1;" (goPro)="goToCard()"></app-billing>
-      </ng-template>
+      <div class="button-save button-1 mt-16 color-white" (click)="closeModal()">Try again</div>
     </div>
   </div>
 </div>
