--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,7 @@ body {
     border: unset;
     user-select: none;
     font-family: 'SVN-Gilroy', sans-serif;
+    box-sizing: border-box;
     transition: .2s;
 }
 
@@ -42,4 +43,229 @@ h6 p {
     width: 100%;
     height: 1px;
     background-color: var(--primary-color);
+}
+
+.line {
+    width: 100%;
+    height: 1px;
+    background: #DEDEDE;
+}
+
+.relative {
+    position: relative;
+}
+
+.pointer {
+    cursor: pointer;
+}
+
+.ta-center {
+    text-align: center;
+}
+
+.ai-center {
+    align-items: center;
+}
+
+.w-60 {
+    width: 60%;
+}
+
+.w-100 {
+    width: 100%;
+}
+
+.mt-4 {
+    margin-top: 4px;
+}
+
+.mt-16 {
+    margin-top: 16px;
+}
+
+.mt-24 {
+    margin-top: 24px;
+}
+
+.mt-80 {
+    margin-top: 80px;
+}
+
+.mt-120 {
+    margin-top: 120px;
+}
+
+.ml-24 {
+    margin-left: 24px;
+  }
+
+.mb-40 {
+    margin-bottom: 40px;
+}
+
+.mb-32 {
+    margin-bottom: 32px;
+}
+
+.mb-24 {
+    margin-bottom: 24px;
+}
+
+.mb-8 {
+    margin-bottom: 8px;
+}
+
+.pad-0 {
+    padding: 0px !important;
+}
+
+.pl-48 {
+    padding-left: 48px !important;
+}
+
+.color-white {
+    color: var(--neutral-white, #FEFEFE);
+}
+
+.color-default {
+    color: var(--text-color-default, #33343E);
+}
+
+.color-gray-1 {
+    color: var(--neutral-grey-1, #616161);
+}
+
+.color-gray-2 {
+    color: var(--neutral-grey-2, #999);
+}
+
+.color-gray-3 {
+    color: var(--neutral-grey-3, #DEDEDE);
+}
+
+.color-gray-300 {
+    color: var(--neutral-300, #929BA2);
+}
+
+.color-primary {
+    color: var(--Primary, #314DD3);
+}
+
+.color-red {
+    color: var(--danger-danger-text, #FF3830);
+}
+
+.color-blue-600 {
+    color: var(--blue-blue-600, #00214D);
+}
+
+.color-black {
+    color: var(--neutral-black, #2F2F2F);
+}
+
+.color-orange {
+    color: var(--Secondary, #F58926);
+}
+
+.bg-gray-3 {
+    background: var(--neutral-grey-3, #DEDEDE);
+}
+
+.bg-primary {
+    background: var(--Primary, #314DD3);
+}
+
+.heading {
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 28px;
+}
+
+.heading-3 {
+    font-size: 36px;
+    font-weight: 600;
+    line-height: 44px;
+}
+
+.heading-5 {
+    font-size: 28px;
+    font-weight: 600;
+    line-height: 36px;
+}
+
+.heading-6 {
+    font-size: 28px;
+    font-weight: 500;
+    line-height: 36px;
+}
+
+.heading-7 {
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 28px;
+}
+
+.button-1 {
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 24px;
+}
+
+.button-2 {
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 20px;
+}
+
+.button-3 {
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 16px;
+}
+
+.body-1 {
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 28px;
+}
+
+.body-2 {
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 28px;
+}
+
+.body-4 {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+}
+
+.body-5 {
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 20px;
+}
+
+.body-6 {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+}
+
+.body-7 {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+}
+
+.body-8 {
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 12px;
+}
+
+.img-nextG {
+    width: 138px;
+    height: 32px;
 }
